--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
+    "vanilla-back-to-top": "^7.2.1",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
